prusti-tests/tests_old/parse/ui/simple_and.stderr
error[E0308]: mismatched types
 --> $DIR/simple_and.rs:5:13
  |
5 | #[requires(12345)]
  |             ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
 --> $DIR/simple_and.rs:8:18
  |
8 | #[requires=     "12345)]
  |                  ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:17:6
   |
17 |     "12345" ]
   |      ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:22:5
   |
22 |     12345
   |     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:29:5
   |
29 |     12345
   |     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:34:21
   |
34 | #[requires(true && 12345)]
   |                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:39:5
   |
39 |     12345  
   |     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_and.rs:44:13
   |
44 |             456)]
   |             ^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
